重构2.3用例场景：使用标准UML用例图替换简单文本描述
- 添加系统级用例图，展示核心用例和参与者关系
- 场景1(医疗问诊)：完整的用例描述，包含前置条件、主成功场景、扩展场景、产出物
- 场景2(代码审计)：详细的安全审计流程用例，遵循OWASP标准
- 场景3(智能体派生)：展示层级派生机制，包含派生公式
- 所有用例图使用mermaid语法，符合UML标准

--- a/docs/方法论/元智能体引擎方法论.md
+++ b/docs/方法论/元智能体引擎方法论.md
@@ -563,40 +563,319 @@
 
 ### 2.3 用例场景
 
-#### 场景1：医疗问诊系统
+#### 2.3.1 系统级用例图
 
-**用户输入**："我要构建一套智能问诊系统"
+```mermaid
+graph TB
+    subgraph 元智能体引擎
+        UC1[生产业务智能体]
+        UC2[派生专科智能体]
+        UC3[复用已有资产]
+        UC4[优化智能体配置]
+        UC5[评估智能体质量]
+    end
 
-**执行流程**：
+    User((用户))
+    Admin((系统管理员))
+
+    User --> UC1
+    User --> UC2
+    Admin --> UC3
+    Admin --> UC4
+
+    UC1 -.包含.-> UC3
+    UC1 -.包含.-> UC5
+    UC2 -.扩展.-> UC1
+    UC4 -.包含.-> UC5
 ```
-1. Researcher: 搜索医疗问诊最佳实践（SOAP记录法、分诊标准）
-2. Asset Manager: 匹配已有"通用医生-v1.0"模板
-3. Architect: 设计蓝图 → 分诊员、问诊员、诊断员
-4. Weaver: 为每个角色编写Prompt
-5. Choreographer: 设计流程 → 分诊→问诊→诊断
-6. Orchestrator: 执行测试
-7. Evaluator: 评估通过，存入资产库
-```
 
-**产出**：3个业务智能体 + 1套协作流程
+**核心用例说明**：
+
+| 用例ID | 用例名称 | 主要参与者 | 说明 |
+|--------|----------|------------|------|
+| UC1 | 生产业务智能体 | 用户 | 根据用户需求，自动生产一套业务智能体及协作流程 |
+| UC2 | 派生专科智能体 | 用户 | 从通用智能体派生出专业化智能体 |
+| UC3 | 复用已有资产 | 系统管理员 | 检索并复用资产库中的智能体模板 |
+| UC4 | 优化智能体配置 | 系统管理员 | 基于历史反馈优化Prompt和流程 |
+| UC5 | 评估智能体质量 | 系统（自动） | 对生产的智能体进行质量评估 |
 
 ---
 
-#### 场景2：代码审计流程
+#### 2.3.2 场景1：医疗问诊系统
 
-**用户输入**："我要一套代码安全审计流程"
+**用例图**：
 
-**执行流程**：
+```mermaid
+graph TB
+    subgraph 元智能体引擎
+        UC1_1[构建问诊系统]
+        UC1_2[收集医疗最佳实践]
+        UC1_3[匹配医疗模板]
+        UC1_4[设计问诊流程]
+        UC1_5[生成问诊智能体]
+        UC1_6[测试问诊场景]
+    end
+
+    User((医疗产品经理))
+
+    User --> UC1_1
+    UC1_1 -.包含.-> UC1_2
+    UC1_1 -.包含.-> UC1_3
+    UC1_1 -.包含.-> UC1_4
+    UC1_1 -.包含.-> UC1_5
+    UC1_1 -.包含.-> UC1_6
 ```
-1. Researcher: 搜索OWASP标准、SAST/DAST实践
-2. Asset Manager: 匹配已有"代码分析员-v1.2"
-3. Architect: 设计蓝图 → 扫描员、分析员、修复建议员
-4. Weaver: 编写安全领域Prompt
-5. Choreographer: 设计流程 → 扫描→分析→建议
-6. Evaluator: 评估通过
+
+**用例详细描述**：
+
+**用例名称**：构建问诊系统
+
+**用例ID**：UC-MED-001
+
+**主要参与者**：医疗产品经理
+
+**前置条件**：
+- 用户已登录元智能体引擎
+- 用户明确需求："构建一套智能问诊系统"
+
+**主成功场景**：
+1. 用户输入需求："我要构建一套智能问诊系统"
+2. **Researcher**：搜索医疗问诊最佳实践
+   - 检索SOAP记录法（主观、客观、评估、计划）
+   - 检索分诊标准（急诊、普通门诊）
+   - 检索医患沟通规范
+   - 输出：《医疗问诊最佳实践报告》
+3. **Asset Manager**：匹配已有医疗模板
+   - 检索资产库：发现"通用医生-v1.0"模板
+   - 评估复用率：70%
+   - 识别缺口：缺少"分诊员"角色
+   - 输出：《资产匹配报告》
+4. **Architect**：设计智能体蓝图
+   - 定义角色：分诊员、问诊员、诊断员
+   - 定义I/O契约：
+     - 分诊员：输入(症状) → 输出(科室+紧急度)
+     - 问诊员：输入(科室+症状) → 输出(病史+体征)
+     - 诊断员：输入(完整信息) → 输出(初步诊断+建议)
+   - 输出：《智能体架构蓝图》
+5. **Weaver**：编写System Prompt
+   - 为"分诊员"注入：严谨、快速判断、风险意识
+   - 为"问诊员"注入：同理心、细致、SOAP框架
+   - 为"诊断员"注入：专业、谨慎、循证医学
+   - 输出：《智能体配置清单》
+6. **Choreographer**：设计协作流程
+   - 定义拓扑：分诊 → 问诊 → 诊断（串行）
+   - 定义异常处理：如发现急症，跳过问诊直接转急诊
+   - 输出：《协作流程DAG》
+7. **Orchestrator**：执行测试
+   - 模拟患者输入："我肚子痛"
+   - 执行完整流程
+   - 记录中间结果
+8. **Evaluator**：质量评估
+   - 评估准确性：是否遵循SOAP
+   - 评估完整性：是否漏问关键信息
+   - 评估安全性：是否有误导风险
+   - 打分：综合得分 0.92
+   - 决策：通过，存入资产库
+9. 系统返回：3个业务智能体 + 1套协作流程
+
+**后置条件**：
+- 生成的智能体已存入资产库
+- 用户可立即部署使用
+- Learner记录本次生产过程
+
+**扩展场景**：
+- 3a. 如果Asset Manager未找到匹配模板
+  - 3a1. Researcher需提供更详细的领域知识
+  - 3a2. Architect从零设计全部角色
+- 8a. 如果Evaluator评估不通过
+  - 8a1. 反馈给Weaver优化Prompt
+  - 8a2. 或反馈给Choreographer调整流程
+  - 8a3. 重新执行步骤6-8
+
+**产出物**：
+- 3个业务智能体：分诊员、问诊员、诊断员
+- 1套协作流程：SOAP标准问诊流程
+- 1份质量报告：包含测试结果和评分
+
+---
+
+#### 2.3.3 场景2：代码安全审计流程
+
+**用例图**：
+
+```mermaid
+graph TB
+    subgraph 元智能体引擎
+        UC2_1[构建审计流程]
+        UC2_2[收集安全标准]
+        UC2_3[匹配审计模板]
+        UC2_4[设计审计拓扑]
+        UC2_5[生成审计智能体]
+        UC2_6[测试审计场景]
+    end
+
+    User((安全工程师))
+
+    User --> UC2_1
+    UC2_1 -.包含.-> UC2_2
+    UC2_1 -.包含.-> UC2_3
+    UC2_1 -.包含.-> UC2_4
+    UC2_1 -.包含.-> UC2_5
+    UC2_1 -.包含.-> UC2_6
 ```
 
-**产出**：3个业务智能体 + 1套审计流程
+**用例详细描述**：
+
+**用例名称**：构建代码安全审计流程
+
+**用例ID**：UC-SEC-001
+
+**主要参与者**：安全工程师
+
+**前置条件**：
+- 用户已登录元智能体引擎
+- 用户明确需求："构建一套代码安全审计流程"
+
+**主成功场景**：
+1. 用户输入需求："我要一套代码安全审计流程"
+2. **Researcher**：搜索安全审计最佳实践
+   - 检索OWASP Top 10标准
+   - 检索SAST/DAST工具实践
+   - 检索SDL（安全开发生命周期）流程
+   - 输出：《代码安全审计最佳实践报告》
+3. **Asset Manager**：匹配已有审计模板
+   - 检索资产库：发现"代码分析员-v1.2"
+   - 评估复用率：60%
+   - 识别缺口：缺少"漏洞修复建议员"
+   - 输出：《资产匹配报告》
+4. **Architect**：设计智能体蓝图
+   - 定义角色：扫描员、分析员、修复建议员
+   - 定义I/O契约：
+     - 扫描员：输入(代码仓库) → 输出(漏洞清单)
+     - 分析员：输入(漏洞清单) → 输出(风险评级+影响分析)
+     - 修复建议员：输入(风险报告) → 输出(修复方案+代码示例)
+   - 输出：《智能体架构蓝图》
+5. **Weaver**：编写System Prompt
+   - 为"扫描员"注入：全面性、规则引擎、误报控制
+   - 为"分析员"注入：安全专业知识、CVSS评分、业务影响评估
+   - 为"修复建议员"注入：最佳实践、代码示例、优先级排序
+   - 输出：《智能体配置清单》
+6. **Choreographer**：设计协作流程
+   - 定义拓扑：扫描 → 分析 → 修复建议（串行）
+   - 定义并行优化：扫描可并行处理多个模块
+   - 定义异常处理：如发现严重漏洞，立即告警
+   - 输出：《协作流程DAG》
+7. **Orchestrator**：执行测试
+   - 模拟代码输入：包含SQL注入、XSS等漏洞的测试代码
+   - 执行完整流程
+   - 记录检测结果
+8. **Evaluator**：质量评估
+   - 评估准确性：是否正确识别已知漏洞
+   - 评估完整性：是否遵循OWASP标准
+   - 评估实用性：修复建议是否可执行
+   - 打分：综合得分 0.88
+   - 决策：通过，存入资产库
+9. 系统返回：3个业务智能体 + 1套审计流程
+
+**后置条件**：
+- 生成的审计流程已存入资产库
+- 用户可集成到CI/CD流程
+- Learner记录本次生产过程
+
+**扩展场景**：
+- 3a. 如果Asset Manager未找到匹配模板
+  - 3a1. Researcher需提供更详细的安全标准
+  - 3a2. Architect从零设计全部角色
+- 7a. 如果测试发现漏报
+  - 7a1. 反馈给Weaver增强扫描规则
+  - 7a2. 重新执行步骤6-8
+
+**产出物**：
+- 3个业务智能体：扫描员、分析员、修复建议员
+- 1套审计流程：OWASP标准审计流程
+- 1份质量报告：包含测试结果和误报率分析
+
+---
+
+#### 2.3.4 场景3：智能体派生
+
+**用例图**：
+
+```mermaid
+graph TB
+    subgraph 元智能体引擎
+        UC3_1[派生专科智能体]
+        UC3_2[继承父智能体能力]
+        UC3_3[注入专业知识]
+        UC3_4[添加约束条件]
+        UC3_5[验证派生结果]
+    end
+
+    User((领域专家))
+
+    User --> UC3_1
+    UC3_1 -.包含.-> UC3_2
+    UC3_1 -.包含.-> UC3_3
+    UC3_1 -.包含.-> UC3_4
+    UC3_1 -.包含.-> UC3_5
+```
+
+**用例详细描述**：
+
+**用例名称**：派生专科智能体
+
+**用例ID**：UC-DRV-001
+
+**主要参与者**：领域专家
+
+**前置条件**：
+- 资产库中存在父智能体（如"内科医生-v2.0"）
+- 用户明确派生需求："从内科医生派生出胃肠科医生"
+
+**主成功场景**：
+1. 用户输入需求："从内科医生派生出胃肠科医生"
+2. **Asset Manager**：检索父智能体
+   - 定位："内科医生-v2.0"
+   - 提取能力清单：问诊、体格检查、诊断推理
+   - 输出：《父智能体配置》
+3. **Researcher**：收集专科知识
+   - 检索胃肠科专业知识：消化系统解剖、常见疾病
+   - 检索专科检查：胃镜、肠镜适应症
+   - 输出：《专科知识库》
+4. **Architect**：设计派生策略
+   - 继承：保留父智能体的通用问诊能力
+   - 特化：增强消化系统相关问诊
+   - 约束：限制诊断范围为消化系统疾病
+   - 输出：《派生蓝图》
+5. **Weaver**：编写派生Prompt
+   - 继承父Prompt的基础框架
+   - 注入专科术语和知识
+   - 添加约束："只处理消化系统相关疾病"
+   - 输出：《胃肠科医生配置》
+6. **Evaluator**：验证派生结果
+   - 测试通用能力：是否保留问诊技能
+   - 测试专科能力：是否正确识别胃肠疾病
+   - 测试边界：是否拒绝心血管疾病咨询
+   - 打分：综合得分 0.91
+   - 决策：通过，标记为"内科医生-v2.0"的子智能体
+7. 系统返回：1个专科智能体 + 派生关系记录
+
+**后置条件**：
+- 派生智能体已存入资产库
+- 建立父子关系链：内科医生 → 胃肠科医生
+- Learner记录派生模式
+
+**派生公式**：
+```
+派生智能体 = 继承(父能力) + 特化(专业知识) + 约束(边界限制)
+```
+
+**产出物**：
+- 1个专科智能体：胃肠科医生
+- 1条派生关系：L1(内科医生) → L2(胃肠科医生)
+- 1份验证报告：包含能力对比和边界测试
+
+---
 
 ### 2.1 角色矩阵
 
