重构第2章：修复核心逻辑断层
高严重问题修复：
- 添加Integrator角色（运维组），负责最终输出整合
- 明确Choreographer（设计时）与Orchestrator（运行时）边界
- Orchestrator抽象出Runtime和Supervisor结构

中严重问题修复：
- 修正协作顺序：Architect→Weaver→Choreographer（串行）
- 添加Evaluator直接反馈给Weaver的快速修正回路
- 定义迭代规则：最多3次，阈值0.8
- Asset Manager增加动态优化能力（Learner驱动）
- 派生机制嵌入Learner和Asset Manager职责

派生机制量化：
- 添加派生度公式 D_derive（LaTeX）
- 定义派生停止条件（避免能力塌缩）
- 添加能力塌缩检测公式

协作机制可视化：
- 添加主流程序列图（mermaid）
- 添加Orchestrator内部结构图
- 添加派生流程序列图
- 明确三种反馈循环机制

--- a/docs/方法论/元智能体引擎方法论.md
+++ b/docs/方法论/元智能体引擎方法论.md
@@ -879,39 +879,289 @@ graph TB
 
 ### 2.1 角色矩阵
 
-系统定义 **8 个核心元角色**，分为 4 个职能组：
+系统定义 **9 个核心元角色**，分为 4 个职能组，构成完整的智能体生产流水线：
 
-| 职能组 | 角色 | 中文名 | 核心职责 |
-|--------|------|--------|----------|
-| **情报组** | Researcher | 情报研究员 | 检索外部最佳实践、行业标准 |
-| | Asset Manager | 资产管家 | 管理内部Agent模板、Prompt组件 |
-| **设计组** | Architect | 架构师 | 拆解意图，设计智能体蓝图 |
-| | Weaver | 织造者 | 编写System Prompt |
-| **执行组** | Choreographer | 编排者 | 设计协作拓扑（DAG/状态机） |
-| | Orchestrator | 调度者 | 运行时调度执行 |
-| **运维组** | Evaluator | 评估者 | 质量评估，拥有否决权 |
-| | Learner | 学习者 | 从历史中提取模式 |
+| 职能组 | 角色 | 中文名 | 核心职责 | 职能边界 | 能力边界 |
+|--------|------|--------|----------|----------|----------|
+| **情报组** | Researcher | 情报研究员 | 检索外部最佳实践、行业标准、前沿方法 | 只提供情报，不做决策 | ✓ 搜索、分析、总结<br>✗ 架构决策、写Prompt |
+| | Asset Manager | 资产管家 | 管理内部Agent模板、Prompt组件、流程蓝图；在Learner驱动下优化资产 | 检索、匹配、优化资产，不创造新资产 | ✓ 语义检索、版本管理、资产优化<br>✗ 创造新资产、修改资产内容 |
+| **设计组** | Architect | 架构师 | 拆解意图，设计智能体蓝图和I/O契约 | 只设计架构，不写Prompt，不设计流程细节 | ✓ 任务分解、边界定义、契约设计<br>✗ 写Prompt、设计流程、执行任务 |
+| | Weaver | 织造者 | 编写System Prompt，赋予智能体灵魂 | 只写Prompt，不设计架构，不设计流程 | ✓ Prompt工程、角色塑造、Few-Shot设计<br>✗ 设计架构、设计流程、执行任务 |
+| **执行组** | Choreographer | 编排者 | 设计协作拓扑（DAG/状态机），定义数据流转（设计时） | 只设计静态拓扑，不执行，不处理运行时异常 | ✓ 流程建模、条件逻辑、状态转移设计<br>✗ 运行时执行、异常处理、写Prompt |
+| | Orchestrator | 调度者 | 运行时调度执行，管理上下文传递（运行时） | 只执行调度，不修改设计，不评估质量 | ✓ 任务调度、上下文路由、异常处理、重试机制<br>✗ 修改流程设计、修改Prompt、质量评估 |
+| **运维组** | Evaluator | 评估者 | 质量评估，拥有最终否决权，可直接反馈给Weaver修正 | 只评估和反馈，不直接修改结果或重新执行 | ✓ 评分标准应用、对抗测试、反馈生成<br>✗ 修改结果、重新执行、架构决策 |
+| | Integrator | 整合者 | 合成最终用户友好响应，确保输出一致性 | 只整合现有输出，不生成新内容 | ✓ 内容合成、格式化、一致性校验<br>✗ 生成新内容、修改评估结果 |
+| | Learner | 学习者 | 从历史中提取模式，驱动Asset Manager优化，管理派生关系 | 只提供优化建议，不强制修改系统 | ✓ 模式识别、优化建议、派生策略<br>✗ 直接修改系统、强制变更、执行任务 |
+
+**关键设计原则**：
+
+1. **单一职责**：每个角色只做一件事，避免职责重叠
+2. **边界清晰**：通过"能做/不能做"明确定义能力边界
+3. **解耦设计**：设计时（Choreographer）与运行时（Orchestrator）分离
+4. **反馈循环**：Evaluator可直接反馈给Weaver，形成快速修正回路
+5. **动态进化**：Learner驱动Asset Manager优化，系统持续进化
 
 ### 2.2 协同流程
 
+#### 2.2.1 主流程（正向生产）
+
+```mermaid
+sequenceDiagram
+    participant U as 用户
+    participant R as Researcher
+    participant AM as Asset Manager
+    participant A as Architect
+    participant W as Weaver
+    participant C as Choreographer
+    participant O as Orchestrator
+    participant E as Evaluator
+    participant I as Integrator
+    participant L as Learner
+
+    U->>R: 用户意图
+    U->>AM: 用户意图
+
+    par 并行情报收集
+        R->>R: 检索外部最佳实践
+        AM->>AM: 检索内部资产
+    end
+
+    R->>A: 最佳实践报告
+    AM->>A: 资产匹配报告
+
+    A->>A: 设计智能体蓝图
+    A->>W: 智能体蓝图
+
+    W->>W: 编写System Prompt
+    W->>C: 智能体配置
+
+    C->>C: 设计协作拓扑
+    C->>O: 流程定义
+
+    O->>O: 执行测试
+    O->>E: 执行结果
+
+    E->>E: 质量评估
+
+    alt 评估通过
+        E->>I: 评估报告(pass=true)
+        I->>I: 整合输出
+        I->>U: 最终响应
+        I->>L: 执行记录
+        L->>AM: 优化建议
+    else 评估不通过
+        E->>W: 修正指令(直接反馈)
+        Note over E,W: 快速修正回路
+        W->>C: 修正后配置
+        C->>O: 更新流程
+        Note over O,E: 重新执行(最多3次)
+    end
 ```
-用户意图 → [Researcher + Asset Manager] → [Architect] → [Weaver + Choreographer] → [Orchestrator] → [Evaluator] → [Learner]
+
+**流程说明**：
+
+1. **并行情报收集**：Researcher和Asset Manager同时工作，提高效率
+2. **串行设计**：Architect → Weaver → Choreographer，确保依赖关系正确
+3. **快速修正回路**：Evaluator可直接反馈给Weaver，无需回到Architect
+4. **最终整合**：Integrator负责合成用户友好的输出
+5. **持续优化**：Learner驱动Asset Manager优化资产库
+
+#### 2.2.2 Orchestrator内部结构
+
+Orchestrator不是简单的调度者，而是包含两个核心组件：
+
+```mermaid
+graph TB
+    subgraph Orchestrator
+        Runtime[Runtime 执行引擎]
+        Supervisor[Supervisor 监控智能体]
+
+        Runtime -->|执行状态| Supervisor
+        Supervisor -->|控制指令| Runtime
+    end
+
+    Input[流程定义] --> Runtime
+    Runtime --> Output[执行结果]
+    Supervisor --> Metrics[性能指标]
 ```
+
+**组件职责**：
+
+| 组件 | 职责 | 能力 |
+|------|------|------|
+| **Runtime** | 执行引擎，负责实际调度和执行 | 任务调度、上下文传递、并行控制 |
+| **Supervisor** | 监控智能体，负责运行时监控和异常处理 | 性能监控、异常检测、重试决策、资源管理 |
+
+#### 2.2.3 反馈循环机制
+
+**快速修正回路**（Evaluator → Weaver）：
+
+```
+条件：score < 0.8 且 iteration < 3
+路径：Evaluator → Weaver → Choreographer → Orchestrator → Evaluator
+修正内容：Prompt优化、输出格式调整
+```
+
+**架构重设回路**（Evaluator → Architect）：
+
+```
+条件：score < 0.5 或 结构性问题
+路径：Evaluator → Architect → Weaver → Choreographer → Orchestrator → Evaluator
+修正内容：角色重新设计、I/O契约调整
+```
+
+**优化驱动回路**（Learner → Asset Manager）：
+
+```
+触发：定期或累积N次执行后
+路径：Learner → Asset Manager → 影响未来生产
+优化内容：资产评分更新、模板优化、派生关系调整
+```
+
+#### 2.2.4 迭代规则
+
+| 规则 | 说明 |
+|------|------|
+| **最大迭代次数** | 3次（避免无限循环） |
+| **通过阈值** | score ≥ 0.8 |
+| **快速修正条件** | 0.5 ≤ score < 0.8（只需Prompt调整） |
+| **架构重设条件** | score < 0.5（需要重新设计） |
+| **失败处理** | 3次迭代后仍不通过，返回失败报告给用户 |
 
 ### 2.3 层级派生机制
 
-**核心公式**：派生 = 继承 + 特化 + 约束
+#### 2.3.1 派生公式
 
-| 层级 | 说明 | 示例 |
-|------|------|------|
-| L0 | 通用智能体 | 医生 |
-| L1 | 领域智能体 | 内科医生 |
-| L2 | 专科智能体 | 胃肠科医生 |
-| L3 | 细分智能体 | 胃镜专家 |
+**定性公式**：
 
-**触发条件**：粒度不足、质量不达标、频率阈值
+```
+派生智能体 = 继承(父能力) + 特化(专业知识) + 约束(边界限制)
+```
 
-> 详细定义见附录A
+**定量公式**：
+
+派生度 $D_{derive}$ 用于评估派生的合理性，避免过度专业化导致的能力塌缩：
+
+$$
+D_{derive} = \alpha \cdot K_{special} + \beta \cdot C_{restrict} - \gamma \cdot I_{inheritance}
+$$
+
+其中：
+- $K_{special}$：专科知识注入量（0-1，归一化）
+- $C_{restrict}$：边界约束的强度（0-1，归一化）
+- $I_{inheritance}$：对父类能力的通用性稀释程度（0-1，归一化）
+- $\alpha, \beta, \gamma$：权重系数，默认值 $\alpha=0.4, \beta=0.3, \gamma=0.3$
+
+**派生停止条件**：
+
+$$
+\begin{cases}
+D_{derive} > 0.7 & \text{过度专业化，停止派生} \\
+0.3 \leq D_{derive} \leq 0.7 & \text{合理派生，可继续} \\
+D_{derive} < 0.3 & \text{派生不足，建议增强特化}
+\end{cases}
+$$
+
+**能力塌缩检测**：
+
+当派生智能体的通用能力损失超过阈值时，触发能力塌缩警告：
+
+$$
+Loss_{general} = \frac{|Capabilities_{parent}| - |Capabilities_{child} \cap Capabilities_{parent}|}{|Capabilities_{parent}|}
+$$
+
+若 $Loss_{general} > 0.5$，则警告：派生过深，通用能力损失过大。
+
+#### 2.3.2 层级结构
+
+| 层级 | 说明 | 示例 | $D_{derive}$ 范围 |
+|------|------|------|-------------------|
+| L0 | 通用智能体 | 医生 | - |
+| L1 | 领域智能体 | 内科医生 | 0.3-0.5 |
+| L2 | 专科智能体 | 胃肠科医生 | 0.4-0.6 |
+| L3 | 细分智能体 | 胃镜专家 | 0.5-0.7 |
+| L4+ | **不建议** | - | >0.7（能力塌缩风险） |
+
+#### 2.3.3 派生触发条件
+
+| 触发条件 | 说明 | 责任角色 |
+|----------|------|----------|
+| **粒度不足** | 通用智能体无法满足专业需求 | Evaluator检测，Learner建议 |
+| **质量不达标** | 通用智能体在特定领域表现差 | Evaluator评分<0.6 |
+| **频率阈值** | 同一领域请求频率>N次 | Learner统计，N默认为10 |
+| **用户显式请求** | 用户明确要求派生 | 直接触发 |
+
+#### 2.3.4 派生流程
+
+```mermaid
+sequenceDiagram
+    participant U as 用户/系统
+    participant L as Learner
+    participant AM as Asset Manager
+    participant A as Architect
+    participant W as Weaver
+    participant E as Evaluator
+
+    U->>L: 派生请求
+    L->>L: 分析派生必要性
+    L->>AM: 检索父智能体
+
+    AM->>AM: 提取父能力清单
+    AM->>A: 父智能体配置
+
+    A->>A: 设计派生策略
+    Note over A: 计算 D_derive
+
+    alt D_derive > 0.7
+        A->>U: 警告：过度专业化
+    else 0.3 ≤ D_derive ≤ 0.7
+        A->>W: 派生蓝图
+        W->>W: 编写派生Prompt
+        W->>E: 派生智能体配置
+
+        E->>E: 验证派生结果
+        Note over E: 检查能力塌缩
+
+        alt 验证通过
+            E->>AM: 存储派生智能体
+            AM->>AM: 记录派生关系
+            AM->>U: 派生成功
+        else 验证失败
+            E->>A: 调整派生策略
+        end
+    end
+```
+
+#### 2.3.5 派生关系管理
+
+**派生树结构**：
+
+```
+L0: 医生
+├── L1: 内科医生
+│   ├── L2: 胃肠科医生
+│   │   └── L3: 胃镜专家
+│   └── L2: 心血管科医生
+└── L1: 外科医生
+    └── L2: 骨科医生
+```
+
+**关系属性**：
+
+| 属性 | 说明 |
+|------|------|
+| `parent_id` | 父智能体ID |
+| `derivation_level` | 派生层级（L0-L3） |
+| `specialization_domain` | 特化领域 |
+| `inheritance_rate` | 继承率（保留父能力的比例） |
+| `D_derive` | 派生度评分 |
+
+**Asset Manager职责扩展**：
+
+- 维护派生关系树
+- 计算派生度 $D_{derive}$
+- 检测能力塌缩
+- 在Learner驱动下优化派生策略
 
 ---
 
